--- a/wp-content/plugins/bulletproof-security/admin/css/bulletproof-security-admin.css
+++ b/wp-content/plugins/bulletproof-security/admin/css/bulletproof-security-admin.css
@@ -35,16 +35,7 @@
 
 .url-path { font-weight:700;}
 
-/************ Star Rating *********************/
-
-div.bps-star-container { float:right; position: relative; top:-55px; right:-153px; height:19px; width:100px; font-size:19px;}
-div.bps-star {height: 100%; position:absolute; top:0px; left:0px; background-color: transparent; letter-spacing:1ex; border:none;}
-.bps-star1 {width:20%;} .bps-star2 {width:40%;} .bps-star3 {width:60%;} .bps-star4 {width:80%;} .bps-star5 {width:100%;}
-.bps-star.bps-star-rating {background-color: #fc0;}
-.bps-star img{display:block; position:absolute; right:0px; border:none; text-decoration:none;}
-div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-right:1px solid #fff;}
-.bps-downloaded {float:right; position: relative; top:-33px; right:0px; }
-.bps-star-link {float:right; position: relative; top:-19px; right:-253px; }
+/**********************************************/
 
 /************** BPS Menu *********************/
 .bps-menu {}
@@ -53,12 +44,44 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 .bps-menu ul li a:hover {color:#000000; background-image:url(../images/menu_btn_over.png); background-repeat:none;}
 .bps-menu ul li a:active {color:#FFFFFF; background-image:url(../images/menu_btn_over.png); background-repeat:none;}
 
+/******** jQuery Layout helpers *********/
+.ui-helper-hidden { display: none; }
+.ui-helper-hidden-accessible { position: absolute; left: -99999999px; }
+.ui-helper-reset { margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
+.ui-helper-clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+.ui-helper-clearfix { display: inline-block; }
+* html .ui-helper-clearfix { height:1%; }
+.ui-helper-clearfix { display:block; }
+.ui-helper-zfix { width: 100%; height: 100%; top: 0; left: 0; position: absolute; opacity: 0; filter:Alpha(Opacity=0); }
+
+/* Defaults have some issues with Dialog windows
+.ui-helper-hidden { display: none; }
+.ui-helper-hidden-accessible { position: absolute !important; clip: rect(1px 1px 1px 1px); clip: rect(1px,1px,1px,1px); }
+.ui-helper-reset { margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
+.ui-helper-clearfix:before, .ui-helper-clearfix:after { content: ""; display: table; }
+.ui-helper-clearfix:after { clear: both; }
+.ui-helper-clearfix { zoom: 1; }
+.ui-helper-zfix { width: 100%; height: 100%; top: 0; left: 0; position: absolute; opacity: 0; filter:Alpha(Opacity=0); }
+*/
+
+/******** jQuery Interaction Cues *********/
+.ui-state-disabled { cursor: default !important; }
+
+/******** jQuery Interaction States *********/
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { font-size:14px;border-left:1px solid #999999;border-right:1px solid #999999;border-bottom:1px solid #999999;padding:0px 10px 5px 10px; }
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color:#FFFFFF; background-image:url(../images/menu_btn.png); background-repeat:none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { font-size:14px;border-left:1px solid #999999;border-right:1px solid #999999;border-bottom:1px solid #999999;padding:0px 10px 5px 10px; }
+.ui-state-hover a, .ui-state-hover a:hover { font-size:14px;color:#000000; background-image:url(../images/menu_btn_over.png); background-repeat:none; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { color:#000000; background-image:url(../images/menu_btn_over.png); background-repeat:none; }
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color:#000000; background-image:url(../images/menu_btn_over.png); background-repeat:none; }
+
 /*********** jQuery UI Tabs *****************/
-#bps-tabs-1, #bps-tabs-2, #bps-tabs-3, #bps-tabs-4, #bps-tabs-5, #bps-tabs-6, #bps-tabs-7, #bps-tabs-8, #bps-tabs-9, #bps-tabs-10, #bps-tabs-11, #bps-tabs-12 {
+#bps-tabs-1, #bps-tabs-2, #bps-tabs-3, #bps-tabs-4, #bps-tabs-5, #bps-tabs-6, #bps-tabs-7, #bps-tabs-8, #bps-tabs-9, #bps-tabs-10,  #bps-tabs-11, #bps-tabs-12 {
 	border:1px solid #999999;
 	padding:0px 10px 5px 10px;
 }
 
+/* controlled by Interaction States Defunct CSS - delete
 #bps-tabs .ui-tabs-nav li.ui-tabs-selected a:link,
 #bps-tabs .ui-tabs-nav li.ui-tabs-selected a:visited,
 #bps-tabs .ui-tabs-nav li.ui-tabs-selected a:hover,
@@ -68,17 +91,7 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 #bps-tabs .ui-tabs-nav li a:visited,
 #bps-tabs .ui-tabs-nav li a:hover,
 #bps-tabs .ui-tabs-nav li a:active { font-size:14px; }
-
-.ui-helper-hidden { display: none; }
-.ui-helper-hidden-accessible { position: absolute; left: -99999999px; }
-.ui-helper-reset { margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
-.ui-helper-clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
-.ui-helper-clearfix { display: inline-block; }
-/* required comment for clearfix to work in Opera \*/
-* html .ui-helper-clearfix { height:1%; }
-.ui-helper-clearfix { display:block; }
-/* end clearfix */
-.ui-helper-zfix { width: 100%; height: 100%; top: 0; left: 0; position: absolute; opacity: 0; filter:Alpha(Opacity=0); }
+*/
 
 .ui-tabs { padding: 0; zoom: 1; }
 
@@ -90,13 +103,14 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 .ui-tabs .ui-tabs-hide, .ui-tabs .ui-tabs-panel .ui-tabs-hide { display: none !important; }
 
 /* Read Me Links on pages */
-.bps-tab-page a {
-	color:#000000;
+/* .bps-tab-page a {
+	color:#21759b;
 	padding:4px 16px 6px 12px;
 	text-decoration:none;
 }
+*/
 /* Read Me Links on pages */
-.bps-tab-page h1 a, .bps-tab-page h2 a, .bps-tab-page h3 a, .bps-tab-page h4 a {
+/* .bps-tab-page h1 a, .bps-tab-page h2 a, .bps-tab-page h3 a, .bps-tab-page h4 a {
 	color:#000000;
 	background-image:url(../images/read_me_btn.png);
 	background-repeat: no-repeat;
@@ -104,7 +118,7 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 	text-decoration:none;
 	margin-left:10px;
 }
-
+*/
 /* Read Me h3 hover links in all */
 .bps-table_cell_help h3 a { font-size:1em; }
 
@@ -255,6 +269,22 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 	padding:15px 10px 0px 10px;
 }
 
+.bps-table_cell_help_no_left_border {
+	background-color:#FFFFFF;
+	font-size:1em;
+	border-right:1px solid black;
+	border-left: none;
+	padding:15px 10px 0px 10px;
+}
+
+.bps-table_cell_help_no_right_border {
+	background-color:#FFFFFF;
+	font-size:1em;
+	border-left:1px solid black;
+	border-right: none;
+	padding:15px 10px 0px 10px;
+}
+
 .bps-table_cell_help a {
 	font-size:1.13em;
 	font-weight:700;
@@ -325,6 +355,7 @@ div.bps-star img {width:19px; height:19px; border-left:1px solid #fff; border-ri
 .regular-text-medium {width:42%}
 .regular-text-label {width:100%;}
 .regular-text-save-path {width:80%}
+.regular-text-short-fixed {width:175px;}
 
 .iniFinderStyle { background-color:#FFFFFF; padding:2px 2px 2px 4px;
 	border-right:2px solid black;
@@ -352,7 +383,6 @@ font-family:Arial, Helvetica, sans-serif;
 #AITpro-link { padding:5px 0px 0px 10px;}
 
 /*********** jQuery UI Dialog ********/
-
 .ui-helper-hidden{display:none;}.ui-helper-hidden-accessible{position:absolute;left:-99999999px;}.ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none;}.ui-helper-clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}.ui-helper-clearfix{display:inline-block;}/* required comment for clearfix to work in Opera \*/ * html .ui-helper-clearfix{height:1%;}.ui-helper-clearfix{display:block;}/* end clearfix */ .ui-helper-zfix{width:100%;height:100%;top:0;left:0;position:absolute;opacity:0;filter:Alpha(Opacity=0);}.ui-state-disabled{cursor:default!important;}.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat;}.ui-widget-overlay{position:absolute;top:0;left:0;width:100%;height:100%;}.ui-resizable{position:relative;}.ui-resizable-handle{position:absolute;font-size:.1px;z-index:99999;display:block;}.ui-resizable-disabled .ui-resizable-handle,.ui-resizable-autohide .ui-resizable-handle{display:none;}.ui-resizable-n{cursor:n-resize;height:7px;width:100%;top:-5px;left:0;}.ui-resizable-s{cursor:s-resize;height:7px;width:100%;bottom:-5px;left:0;}.ui-resizable-e{cursor:e-resize;width:7px;right:-5px;top:0;height:100%;}.ui-resizable-w{cursor:w-resize;width:7px;left:-5px;top:0;height:100%;}.ui-resizable-se{cursor:se-resize;width:12px;height:12px;right:1px;bottom:1px;}.ui-resizable-sw{cursor:sw-resize;width:9px;height:9px;left:-5px;bottom:-5px;}.ui-resizable-nw{cursor:nw-resize;width:9px;height:9px;left:-5px;top:-5px;}.ui-resizable-ne{cursor:ne-resize;width:9px;height:9px;right:-5px;top:-5px;}.wp-dialog{position:absolute;width:300px;overflow:hidden;}.wp-dialog .ui-dialog-titlebar{position:relative;}
 
 #bps-open-modal input[type="button"],.bps-modal-button {
@@ -415,7 +445,14 @@ font-family:Arial, Helvetica, sans-serif;
 	padding:0px;
 	}
 	
-.wp-dialog .ui-dialog-buttonpane .ui-dialog-buttonset{float:right;}.wp-dialog .ui-dialog-buttonpane button{margin:.5em .4em .5em 0;cursor:pointer;}.wp-dialog .ui-resizable-se{width:14px;height:14px;right:3px;bottom:3px;}.ui-draggable .ui-dialog-titlebar{cursor:move;}.wp-dialog{border:1px solid #999;-moz-box-shadow:0 0 16px rgba(0,0,0,0.3);-webkit-box-shadow:0 0 16px rgba(0,0,0,0.3);box-shadow:0 0 16px rgba(0,0,0,0.3);}
+.wp-dialog .ui-dialog-buttonpane .ui-dialog-buttonset{float:right;}
+.wp-dialog .ui-dialog-buttonpane button{margin:.4em .5em .5em 0;cursor:pointer;}
+.wp-dialog .ui-resizable-se{width:20px;height:20px;right:0px;bottom:0px;}
+.ui-draggable .ui-dialog-titlebar{cursor:move;}
+.wp-dialog{border:1px solid #999;-moz-box-shadow:0 0 16px rgba(0,0,0,0.3);-webkit-box-shadow:0 0 16px rgba(0,0,0,0.3);box-shadow:0 0 16px rgba(0,0,0,0.3);}
+.wp-dialog .ui-button-text {font-size:11px; font-weight:bold;}
+/* .wp-dialog .ui-button { background-image:none;} */
+.wp-dialog .ui-button { background:url('../images/close-button.png') no-repeat -3px -3px;}
 
 .wp-dialog .ui-dialog-title{
 	display:block;
@@ -437,14 +474,15 @@ font-family:Arial, Helvetica, sans-serif;
 
 .wp-dialog{-moz-border-radius-topleft:4px;-webkit-border-top-left-radius:4px;-khtml-border-top-left-radius:4px;border-top-left-radius:4px;-moz-border-radius-topright:4px;-webkit-border-top-right-radius:4px;-khtml-border-top-right-radius:4px;border-top-right-radius:4px;}.wp-dialog .ui-dialog-titlebar{-moz-border-radius-topleft:3px;-webkit-border-top-left-radius:3px;-khtml-border-top-left-radius:3px;border-top-left-radius:3px;-moz-border-radius-topright:3px;-webkit-border-top-right-radius:3px;-khtml-border-top-right-radius:3px;border-top-right-radius:3px;}
 
+/* this is the top right corner X button */
 .wp-dialog .ui-dialog-titlebar-close{
 	position:absolute;
 	width:29px;
 	height:16px;
-	top:2px;
+	top:6px;
 	right:6px;
 	background:url('../images/buttons.gif') no-repeat -87px -16px;
 	padding:0;
 	}
 
-.wp-dialog .ui-dialog-titlebar-close:hover,.wp-dialog .ui-dialog-titlebar-close:focus{background-position:-87px -32px;}.ui-widget-overlay{background-color:#000;opacity:.6;filter:alpha(opacity=60);}
+.wp-dialog .ui-dialog-titlebar-close:hover,.wp-dialog .ui-dialog-titlebar-close:focus{background-position:-86px -32px;}.ui-widget-overlay{background-color:#000;opacity:.6;filter:alpha(opacity=60);}
