--- a/wp-content/themes/genesis/lib/css/admin.css
+++ b/wp-content/themes/genesis/lib/css/admin.css
@@ -1,120 +1,172 @@
-/** A dividing horizontal rule **/
+/* A dividing horizontal rule ----------- */
+
 hr.div {
-	background: #CCC;
+	background: #ccc;
 	height: 1px;
 	border: none;
 	margin: 10px 0;
 }
 
-/** Fix notice placment on our admin pages */
-.wrap div.updated,
-.wrap div.error {
-    clear: both;
+
+/* Genesis menu icon ----------- */
+
+#adminmenu .toplevel_page_genesis .wp-menu-image img {
+	height: 16px;
+	width: 16px;
 }
 
-/** Genesis metabox Styles **/
-.genesis-metaboxes {
-	width: 650px;
-	padding-bottom: 20px;
+/* Genesis Upgraded ----------- */
+
+.full-width-image {
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	max-width: 100%;
 }
+
+.whats-new {
+	border-radius: 5px;
+}
+
+
+/* Fix notice placment on our admin pages ----------- */
+
+.wrap div.error,
+.wrap div.updated {
+	clear: both;
+}
+
+
+/* Genesis metabox styles ----------- */
+
+.genesis-metaboxes {
+	padding-bottom: 20px;
+	width: 650px;
+}
+
 .genesis-metaboxes h2 {
 	float: left;
 }
+
 .genesis-metaboxes .top-buttons {
 	float: right;
 	padding-right: 20px;
 }
+
 .genesis-metaboxes .top-buttons input {
 	margin-left: 10px;
 }
+
 .genesis-metaboxes .bottom-buttons {
-	text-align: right;
 	padding-right: 20px;
+	text-align: right;
+}
+
+.genesis-metaboxes .bottom-buttons input {
+	margin-left: 10px;
 }
 
 .genesis-metaboxes .metabox-holder {
-	width: 650px;
-	overflow: hidden;
 	clear: both;
+	overflow: hidden;
+	width: 650px;
 }
+
 .genesis-metaboxes .meta-box-sortables {
 	padding-right: 10px;
 }
+
 .genesis-metaboxes .inside {
 	padding: 0 10px;
 }
+
 .genesis-metaboxes fieldset {
 	margin-top: 1em;
 }
+
 .genesis-metaboxes legend {
 	line-height: 140%;
 }
 
 
-/** Layout Options Styles **/
+/* Layout options styles ----------- */
+
 .genesis-layout-selector input {
 	display: none;
 	text-align: center;
 }
+
 .genesis-layout-selector input#default-layout {
 	display: inline;
 }
+
 .genesis-layout-selector label.box {
 	display: block;
 	float: left;
 	margin: 10px 10px 10px 0;
 	text-align: center;
 }
+
 .genesis-layout-selector label.box img {
-	max-width: 85px;
 	border: 3px solid transparent;
 	margin-bottom: 5px;
+	max-width: 85px;
 }
+
 .genesis-layout-selector label.box img:hover {
 	border: 3px solid #ddd;
 }
+
 .genesis-layout-selector label.box.selected img {
 	border: 3px solid #ccc;
 }
 
-/** Inpost Layout Box */
+
+/* Inpost layout box */
+
 #genesis_inpost_layout_box .inside input#default-layout {
 	margin-left: 5px;
 }
+
 #genesis_inpost_layout_box .genesis-layout-selector {
 	padding-top: 5px;
 }
 
-/** Layout Selector, no JS */
-.no-js .genesis-layout-selector input,
-.ie8 .genesis-layout-selector input {
+
+/* Layout selector, no JS ----------- */
+
+.ie8 .genesis-layout-selector input,
+.no-js .genesis-layout-selector input {
 	display: inline;
 }
-.no-js .genesis-layout-selector label.box img,
-.no-js .genesis-layout-selector label.box img:hover,
-.no-js .genesis-layout-selector label.box.selected img,
+
 .ie8 .genesis-layout-selector label.box img,
 .ie8 .genesis-layout-selector label.box img:hover,
-.ie8 .genesis-layout-selector label.box.selected img {
+.ie8 .genesis-layout-selector label.box.selected img,
+.no-js .genesis-layout-selector label.box img,
+.no-js .genesis-layout-selector label.box img:hover,
+.no-js .genesis-layout-selector label.box.selected img {
 	border: 3px solid transparent;
 }
 
-/* Widgets
------------------------------------------------------------- */
+
+/* Widgets ----------- */
 
 .genesis-widget-column {
 	float: left;
 	width: 250px;
 }
+
 .genesis-widget-column-right {
 	margin-left: 10px;
 }
+
 .genesis-widget-column-box {
 	background: #f1f1f1;
 	border: 1px solid #ddd;
 	margin-top: 10px;
 	padding: 10px 10px 0;
 }
+
 .genesis-widget-column-box-top {
 	margin-top: 0;
 }
@@ -123,6 +175,10 @@ hr.div {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+}
+
+.genesis-image-size-selector {
+	max-width: 205px;
 }
 
 .no-js .hide-if-no-js {
